--- a/assets/sass/components/_posts.scss
+++ b/assets/sass/components/_posts.scss
@@ -35,7 +35,7 @@
 			}
 
 			.subtitle {
-				color: #aaa;
+				font-style: italic;
 				line-height: 1.2;
         		font-size: 0.8em;
 				margin-bottom: 10px;
