--- a/assets/sass/components/_research-entry.scss
+++ b/assets/sass/components/_research-entry.scss
@@ -49,7 +49,7 @@
         .outlet, .year {
             margin-left: 5px;
             font-size: 0.8em;
-            color: #aaa;
+            font-style: italic;
         }
 
         .year:after {
