--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -21,7 +21,7 @@
 			a, span {
 				border-bottom: 0;
 				color: inherit;
-				cursor: pointer;
+				color: _palette(fg-bold);
 				display: block;
 				font-size: 0.9em;
 				padding: 0.625em 0;
